# advent24

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
day1/: main.py
day2/: main.py
day3/: main.py
utils/: __init__.py
